Thu Aug  5 19:53:40 CEST 2004 (tk)
----------------------------------
  * libclamav: integrate Mydoom.M log detector from Trog (temporary feature)
  * libclamav: pe: fix FSG detection (aCaB)

Thu Aug  5 11:41:00 CEST 2004 (tk)
----------------------------------
  * libclamav: pe: pass virtual instead of raw address of entry point to
	       petite_inflate2x_1to9

Thu Aug  5 08:44:51 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Handle more variants of gethostbyname_r
  			Try harder to get fully qualified hostname
			Template files can now contain more than one variable
			Template files sendmail variables handling changed to
				allow access to variables not in braces. All
				sendmail variables are now delimeted by
				dollars, e.g.  ${j}$
			Better local IP table by Damian Menscher
				<menscher@uiuc.edu> and Andy Fiddaman
				<clam@fiddaman.net>

Thu Aug  5 03:10:32 CEST 2004 (tk)
----------------------------------
  * libclamav: include FSG unpacker from aCaB

Wed Aug  4 22:03:56 CEST 2004 (tk)
----------------------------------
  * libclamav: pe: improve detection of broken executable files
  * libclamav: new scan option CL_BROKEN (report broken executables as
	       Broken.Executable)
  * clamscan: new option --detect-broken
  * clamd: new directive DetectBrokenExecutables
  * docs: update manual pages

Wed Aug  4 19:59:54 BST 2004 (njh)
----------------------------------
  * libclamav:	Improved the decoding of multipart messages and MIME headers

Wed Aug  4 20:01:26 CEST 2004 (tk)
----------------------------------
  * libclamav: fix compilation error with Sun's compiler (reported by
	       Alex S Moore <asmoore*edge.net>)

Wed Aug  4 19:06:52 CEST 2004 (tk)
----------------------------------
  * libclamav: re-activate new mail detection mechanism

Wed Aug  4 17:34:46 CEST 2004 (tk)
----------------------------------
  * libclamav: petite: big-endian fixes
  * libclamav: pe: activate Petite unpacker
